<resources>
    <string name="app_name">LastMessenger</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="your_email2">Your email:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password2list">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password2">Forgot password?</string>
    <string name="your_email3">Your email:</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="logout">logout</string>
    <string name="nice_ok">Nice ok</string>
    <string name="type_your_message">Type your message:</string>
</resources>