<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ResetActivity">

    <TextView
        android:id="@+id/ForgotText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textSize="48sp"
        android:layout_marginTop="150dp"
        android:textColor="@android:color/holo_purple"
        />
    <EditText
        android:id="@+id/youremailplease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:hint="@string/your_email2"
        android:ems="10"
        android:layout_marginTop="32dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/ForgotText"
        tools:ignore="TextFields"
        />
    <Button
        android:id="@+id/buttonForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:padding="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youremailplease" />


</androidx.constraintlayout.widget.ConstraintLayout>